[package]
name = "elmerfs"
version = "0.1.0"
authors = ["Romain Vaillant <romain.vaillant@scality.com>"]
edition = "2018"

[workspace]
members = [
    "antidotec/",
]

[dependencies]
async-std = { version = "1.6", features = ["unstable"] }
antidotec = { path = "antidotec" }
fuse = "0.3"
nix = "0.17"
thiserror = "1.0"
time = "0.1"
tracing = "0.1.25"
tracing-subscriber = { version = "0.2.16", features = ["env-filter"] }
tracing-appender = { version = "0.1" }
clap = "2.33"
crossbeam = "0.7"
once_cell = "1.4"
tracing-flame = { version = "0.1" }

[dependencies.tracing-futures]
version = "0.2"

[dev-dependencies]
tempfile = "3.1"

[profile.release]
debug = 1
