[package]
name = "elmerfs"
version = "0.1.0"
authors = ["Romain Vaillant <romain.vaillant@scality.com>"]
edition = "2018"

[workspace]
members = [
    "antidotec/",
]

[dependencies]
tokio = { version = "1.15", features = ["full"] }
antidotec = { path = "antidotec" }
fuse = "0.3"
nix = "0.17"
thiserror = "1.0"
anyhow = "1.0"
time = "0.1"
tracing = "0.1.25"
tracing-subscriber = { version = "0.2.16", features = ["env-filter"] }
tracing-appender = { version = "0.1" }
clap = "2.33"
crossbeam = "0.7"
once_cell = "1.4"
jemallocator = "0.3.0"
async-trait = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.tracing-futures]
version = "0.2"

[dev-dependencies]
tempfile = "3.1"

[profile.release]
panic = "abort"
lto = true
debug = 1
