[package]
name = "elmerfs"
version = "0.1.0"
authors = ["Romain Vaillant <romain.vaillant@scality.com>"]
edition = "2018"

[workspace]
members = [
    "antidotec/",
    "3rdparty/fuser"
]

[dependencies]
tokio = { version = "1.15", features = ["full"] }
antidotec = { path = "antidotec" }
fuser = { path = "3rdparty/fuser", features = ["abi-7-31"] }
nix = "0.17"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
clap = "2.33"
crossbeam = "0.7"
once_cell = "1.4"
jemallocator = "0.3.0"
async-trait = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"

[dependencies.tracing-futures]
version = "0.2"

[dev-dependencies]
tempfile = "3.1"

[profile.release]
panic = "abort"
lto = true
debug = 1
