[package]
name = "antidotec"
version = "0.1.0"
authors = ["Romain Vaillant <romain.vaillant@scality.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
protobuf = "2.14"
async-std = "1.0"
thiserror = "1.0"
tracing = "0.1"

[build-dependencies]
protobuf-codegen-pure = "2.3"

[dependencies.tracing-futures]
version = "0.2"
default-features = false
features = ["std", "std-future"]
