[package]
name = "antidotec"
version = "0.1.0"
authors = ["Romain Vaillant <romain.vaillant@scality.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
prost = "0.7"
tokio = { version = "1.15", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"

[build-dependencies]
prost-build = { version = "0.7" }

[dependencies.tracing-futures]
version = "0.2"
default-features = false
features = ["std", "std-future"]
